--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dev_dependencies:
   pull_to_refresh: ^1.5.0
   #看图片
   photo_view: ^0.3.3
+  #google登录
+  google_sign_in: ^4.0.4
 
 
 # For information on the generic Dart part of this file, see the
